Modified to look more like a base for my homepage

--- a/index.html
+++ b/index.html
@@ -1,8 +1,21 @@
 <html>
 	<head>
-		<title>index</title>
+		<title>Introduction</title>
+		
 	</head>
 	<body>
-		<p>Hello World and Everyone!</p>
+		<div class="MainSection">
+			<h1 class="Title">Introduction</h1>
+			
+			<h2 class="SubTitle">About Me</h2>
+			
+			<p>
+				Welcome to my CS 313 homepage! Please enjoy your stay and view my progress as I learn the world of web engineering from the server's point of
+				view. My name is Grant Merrill. I am a junior, studying at Brigham Young University-Idaho and will be graduating (if all goes well) at the end
+				of 2016. I love to play piano and violin. I am also a big gamer. I love making "Let's Play" videos and speedrunning video games. Combining
+				video games and music is one of my favorite things to do. I am unsure what I will be wanting to do after I graduate but hopefully something
+				awesome! Thanks for reading!
+			</p>
+		</div>
 	</body>
-</html>
+</html
