trying to update my php project

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				view. My name is Grant Merrill. I am a junior, studying at Brigham Young University-Idaho and will be graduating (if all goes well) at the end
 				of 2016. I love to play piano and violin. I am also a big gamer. I love making "Let's Play" videos and speedrunning video games. Combining
 				video games and music is one of my favorite things to do. I am unsure what I will be wanting to do after I graduate but hopefully something
-				awesome! Thanks for reading!
+				awesome! Thanks for reading! okay...
 			</p>
 		</div>
 	</body>
