Added css, images, and modified greatly the homepage

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <html>
 	<head>
 		<title>Introduction</title>
-		
+		<link rel="stylesheet" href="index.css" />
 	</head>
 	<body>
+		<a href="https://youtube.com/user/kacologo" target="_blank">
+			<img class="CornerPic" src="images/kacologo_logo.jpg" />
+		</a>
 		<div class="MainSection">
 			<h1 class="Title">Introduction</h1>
 			
@@ -14,8 +17,14 @@
 				view. My name is Grant Merrill. I am a junior, studying at Brigham Young University-Idaho and will be graduating (if all goes well) at the end
 				of 2016. I love to play piano and violin. I am also a big gamer. I love making "Let's Play" videos and speedrunning video games. Combining
 				video games and music is one of my favorite things to do. I am unsure what I will be wanting to do after I graduate but hopefully something
-				awesome! Thanks for reading! okay...
+				awesome! Thanks for reading!
 			</p>
+			
+			<img class="ProfilePic" src="images/Kelsi and I.jpg" />
+			
+			<h2 class="SubTitle">Assignments</h2>
+			
+			<p>Click <a href="">here</a> to see a list of my assignments.</p>
 		</div>
 	</body>
 </html
