Modified the here link to go to assignments.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			
 			<h2 class="SubTitle">Assignments</h2>
 			
-			<p>Click <a href="">here</a> to see a list of my assignments.</p>
+			<p>Click <a href="assignments.html">here</a> to see a list of my assignments.</p>
 		</div>
 	</body>
 </html
