Added new html files. Created navigation bar with different stlying.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
 		<a href="https://youtube.com/user/kacologo" target="_blank">
 			<img class="CornerPic" src="images/kacologo_logo.jpg" />
 		</a>
+		<div class="TitleContainer">
+			<h1 class="Title">WELCOME</h1>
+		</div>
+		<ul id="Nav">
+			<li class="NavItem"><a class="NavLink" href="index.html">HOME</a></li>
+			<li class="NavItem"><a class="NavLink" href="assignments.html">ASSIGNMENTS</a></li>
+			<li class="NavItem"><a class="NavLink" href="php_index.html">PHP PROJECT</a></li>
+			<li class="NavItem"><a class="NavLink" href="academic.html">ACADEMIC INFO</a></li>
+		</ul>
 		<div class="MainSection">
-			<h1 class="Title">Introduction</h1>
 			
 			<h2 class="SubTitle">About Me</h2>
 			
@@ -16,15 +24,12 @@
 				Welcome to my CS 313 homepage! Please enjoy your stay and view my progress as I learn the world of web engineering from the server's point of
 				view. My name is Grant Merrill. I am a junior, studying at Brigham Young University-Idaho and will be graduating (if all goes well) at the end
 				of 2016. I love to play piano and violin. I am also a big gamer. I love making "Let's Play" videos and speedrunning video games. Combining
-				video games and music is one of my favorite things to do. I am unsure what I will be wanting to do after I graduate but hopefully something
+				video games and music is one of my favorite things to do. If you would like to see more gaming and music, click on the link in the corner to
+				navigate to my YouTube channel! I am unsure what I will be wanting to do after I graduate but hopefully something
 				awesome! Thanks for reading!
 			</p>
 			
 			<img class="ProfilePic" src="images/Kelsi and I.jpg" />
-			
-			<h2 class="SubTitle">Assignments</h2>
-			
-			<p>Click <a href="assignments.html">here</a> to see a list of my assignments.</p>
 		</div>
 	</body>
-</html
+</html>
