--- a/php_index.html
+++ b/php_index.html
@@ -1,11 +1,11 @@
 <html>
 	<head>
-		<title>Assignments</title>
+		<title>Contact</title>
 		<link rel="stylesheet" href="index.css" />
 	</head>
 	<body>
 		<div class="TitleContainer">
-			<h1 class="Title">ASSIGNMENTS</h1>
+			<h1 class="Title">PHP PROJECT</h1>
 		</div>
 		<ul id="Nav">
 			<li class="NavItem"><a class="NavLink" href="index.html">HOME</a></li>
@@ -14,8 +14,7 @@
 			<li class="NavItem"><a class="NavLink" href="academic.html">ACADEMIC INFO</a></li>
 		</ul>
 		<div class="MainSection">
-			
-			<h2 class="SubTitle">Coming Soon!</h2>
+		
 		</div>
 	</body>
 </html>
