Reorganized the structure. Added images. Created banner on PHP project.

--- a/academic.html
+++ b/academic.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Academic Information</title>
-		<link rel="stylesheet" href="index.css" />
+		<link rel="stylesheet" href="css/index.css" />
 	</head>
 	<body>
 		<div class="TitleContainer">
