--- a/assignments.html
+++ b/assignments.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Assignments</title>
-		<link rel="stylesheet" href="index.css" />
+		<link rel="stylesheet" href="css/index.css" />
 	</head>
 	<body>
 		<div class="TitleContainer">
