--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Introduction</title>
-		<link rel="stylesheet" href="index.css" />
+		<link rel="stylesheet" href="css/index.css" />
 	</head>
 	<body>
 		<a href="https://youtube.com/user/kacologo" target="_blank">
