--- a/videos.html
+++ b/videos.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" href="css/main.css" />
 		<script src="js/createPage.js"></script>
 	</head>
-	<body onload="start('HOME')">
+	<body onload="start('VIDEOS')">
 	
 	</body>
 </html>
