Fixed a broken image link. Added a Content DIV section to php pages.

--- a/forum.html
+++ b/forum.html
@@ -5,6 +5,8 @@
 		<script src="js/createPage.js"></script>
 	</head>
 	<body onload="start('FORUM')">
-	
+		<div id="Content">
+			
+		</div>
 	</body>
 </html>
