--- a/videos.html
+++ b/videos.html
@@ -5,6 +5,8 @@
 		<script src="js/createPage.js"></script>
 	</head>
 	<body onload="start('VIDEOS')">
-	
+		<div id="Content">
+			
+		</div>
 	</body>
 </html>
