added lesson3, js, css, and image files

--- a/php_index.html
+++ b/php_index.html
@@ -2,11 +2,20 @@
 	<head>
 		<title>Kacologo</title>
 		<link rel="stylesheet" href="css/main.css" />
+		<link rel="stylesheet" href="css/video.css" />
 		<script src="js/createPage.js"></script>
 	</head>
 	<body onload="start('HOME')">
 		<div id="Content">
-			
+			<a class="VideoLink">
+				<img class="VideoImage" src="https://img.youtube.com/vi/dWpeJZTbKIk/hqdefault.jpg" />
+			</a>
+			<a class="VideoLink">
+				<img class="VideoImage" src="https://img.youtube.com/vi/dWpeJZTbKIk/hqdefault.jpg" />
+			</a>
+			<a class="VideoLink">
+				<img class="VideoImage" src="https://img.youtube.com/vi/dWpeJZTbKIk/hqdefault.jpg" />
+			</a>
 		</div>
 	</body>
 </html>
