Added a link for Lesson 3 team activity

--- a/assignments.html
+++ b/assignments.html
@@ -15,7 +15,13 @@
 		</ul>
 		<div class="MainSection">
 			
-			<h2 class="SubTitle">Coming Soon!</h2>
+			<h2 class="SubTitle">Team Assignments</h2>
+			
+			<p>
+				<ul>
+					<li><a href="team-assignments/Week3_TeamActivity.html">Lesson 3</a></li>
+				</ul>
+			</p>
 		</div>
 	</body>
 </html>
