--- a/php-project/forum.html
+++ b/php-project/forum.html
@@ -22,5 +22,6 @@
         <navigator></navigator>
         <content></content>
         <footer-links></footer-links>
+        <?php echo "HI"; ?>
 	</body>
 </html>
