--- a/php-project/php_index.html
+++ b/php-project/php_index.html
@@ -17,6 +17,7 @@
         <script src="js/videos.js"></script>
         <script src="js/forum.js"></script>
         <script src="js/contact.js"></script>
+        <script src="js/signup.js"></script>
 	</head>
 	<body ng-controller="MainCtrl as main" ng-init="main.page = 'HOME'">
         <navigator></navigator>
