Added login.js to the main pages.

--- a/php-project/php_index.html
+++ b/php-project/php_index.html
@@ -18,6 +18,7 @@
         <script src="js/forum.js"></script>
         <script src="js/contact.js"></script>
         <script src="js/signup.js"></script>
+        <script src="js/login.js"></script>
 	</head>
 	<body ng-controller="MainCtrl as main" ng-init="main.page = 'HOME'">
         <navigator></navigator>
