--- a/php-project/videos.html
+++ b/php-project/videos.html
@@ -17,6 +17,7 @@
         <script src="js/videos.js"></script>
         <script src="js/forum.js"></script>
         <script src="js/contact.js"></script>
+        <script src="js/login.js"></script>
 	</head>
 	<body ng-controller="MainCtrl as main" ng-init="main.page = 'VIDEOS'">
         <navigator></navigator>
