--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<ul id="Nav">
 			<li class="NavItem"><a class="NavLink" href="index.html">HOME</a></li>
 			<li class="NavItem"><a class="NavLink" href="assignments.html">ASSIGNMENTS</a></li>
-			<li class="NavItem"><a class="NavLink" href="php-project/php_index.html">PHP PROJECT</a></li>
+			<li class="NavItem"><a class="NavLink" href="php-project/php_index.php">PHP PROJECT</a></li>
 			<li class="NavItem"><a class="NavLink" href="academic.html">ACADEMIC INFO</a></li>
 		</ul>
 		<div class="MainSection">
